--- a/index.html
+++ b/index.html
@@ -3,18 +3,35 @@
   <head>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
+<link rel="stylesheet" src="css/style.css">
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 header">
+            WELCOME
+          </div>
+          <div class="col-12 content">
+            ABOUT US
+          </div>
+          <div class="col-12">
+            SERVICES
+          </div>
+          <div class="col-12">
+            WHAT WE DO
+          </div>
+          <div class="col-12">
+            PORTFOLIO
+          </div>
+          <div class="col-12 footer">
+            CONTACT US
+          </div>
+        </div>
+    </div><!--./main container-->
 
 
 
-
-
-
-    
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
