Added Assets folder

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <div class="row">
           <div class="col-12 header">
             WELCOME
+            <img src="images/backgrounds/h_img.jpg" alt="Delani studio">
           </div>
           <div class="col-12 content">
             ABOUT US
+            <img src="images/backgrounds/s_image.jpg"alt="">
+
           </div>
           <div class="col-12">
             SERVICES
@@ -24,8 +27,12 @@
           <div class="col-12">
             PORTFOLIO
           </div>
-          <div class="col-12 footer">
+          <div class="col-12">
             CONTACT US
+            <img src="images/backgrounds/c_image.jpg" alt="Typewriter">
+          </div>
+          <div class="footer">
+            
           </div>
         </div>
     </div><!--./main container-->
