--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
             <img src="images/backgrounds/c_image.jpg" alt="Typewriter">
           </div>
           <div class="footer">
-            
+            <img src="images/social_icons/twitter.png" alt="twitter icon">
+            <img src="images/social_icons/dribble.png" alt="dribble icon">
+            <img src="images/social_icons/facebook.png" alt="facebook icon">
+            <img src="images/social_icons/g_plus.png" alt="googleplus icon">
+            <img src="images/social_icons/skype.png" alt="skype icon">
+            <img src="images/social_icons/stumble_upon.png" alt="stumble_upon icon">
+            <img src="images/social_icons/behance.png" alt="behance icon">
+            <img src="images/social_icons/pinterest.png" alt="pinterest icon">
+            <img src="images/social_icons/flickr.png" alt="flickr icon">
+            <img src="images/social_icons/you_tube.png" alt="youtube icon">
           </div>
         </div>
     </div><!--./main container-->
