Added portfolio images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
 
           </div>
           <div class="col-12 portfolio">
-            PORTFOLIO
+            PORTFOLIO<br/>
+            <img src="images/portfolio/work4.jpg" alt="black">
+            <img src="images/portfolio/work3.jpg" alt="ontari">
+            <img src="images/portfolio/work2.jpg" alt="orange">
+            <img src="images/portfolio/work1.jpg" alt="widget">
+            <img src="images/portfolio/work5.jpg" alt="good day">
+            <img src="images/portfolio/work6.jpg" alt="buttons">
+            <img src="images/portfolio/work7.jpg" alt="logo">
+            <img src="images/portfolio/work8.jpg" alt="restaurant logo">
+
           </div>
           <div class="col-12 info">
             CONTACT US
