Added delani studio logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container-fluid">
         <div class="row">
           <div class="welcome">
+            <img src="images/logo/logo.png" alt="delani logo">
             <h1>WELCOME TO DELANI STUDIO</h1>
             <h2>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h2>
             
