--- a/index.html
+++ b/index.html
@@ -36,21 +36,34 @@
             <img src="images/services_icons/product_icon.png" alt="product icon">
 
           </div>
-          <div class="col-12 portfolio">
+          <div class="row portfolio">
             PORTFOLIO<br/>
-            <img src="images/portfolio/work4.jpg" alt="black">
-            <img src="images/portfolio/work3.jpg" alt="ontari">
-            <img src="images/portfolio/work2.jpg" alt="orange">
-            <img src="images/portfolio/work1.jpg" alt="widget">
-            <img src="images/portfolio/work5.jpg" alt="good day">
-            <img src="images/portfolio/work6.jpg" alt="buttons">
-            <img src="images/portfolio/work7.jpg" alt="logo">
-            <img src="images/portfolio/work8.jpg" alt="restaurant logo">
+            <div class="col-md-3">
+              <img src="images/portfolio/work4.jpg" alt="black">
+             <img src="images/portfolio/work3.jpg" alt="ontari">
+            </div>
+            <div class="col-md-3">
+              <img src="images/portfolio/work2.jpg" alt="orange">
+              <img src="images/portfolio/work1.jpg" alt="widget">
+            </div>
+            <div class="col-md-3">
+              <img src="images/portfolio/work5.jpg" alt="good day">
+              <img src="images/portfolio/work6.jpg" alt="buttons">
+            </div>
+            <div class="col-md-3">
+              <img src="images/portfolio/work7.jpg" alt="logo">
+              <img src="images/portfolio/work8.jpg" alt="restaurant logo">
+            </div>
 
           </div>
           <div class="col-12 info">
             CONTACT US
-            
+            <form>
+            <input type="text" id="name" placeholder="John Doe">
+            <input type="email" id="email" placeholder="johndoe@example.com">
+            <input type="text" id="message" placeholder="Type your message..">
+
+            </form>
           </div>
 
           <div class="footer">
