Added image-fluid classes

--- a/index.html
+++ b/index.html
@@ -73,37 +73,37 @@
             
           </div>
 
-          <div>
+          <div class="portfolio">
             PORFOLIO
-            <div class="row portfolio">
+            <div class="row">
               <div class="col-md-3">
-                <img src="images/portfolio/work4.jpg" alt="black">
+                <img src="images/portfolio/work4.jpg" alt="black" class="img-fluid">
               </div>
               <div class="col-md-3">
-                <img src="images/portfolio/work3.jpg" alt="ontari">
+                <img src="images/portfolio/work3.jpg" class="img-fluid alt="ontari">
               </div>
               <div class="col-md-3">
-                <img src="images/portfolio/work2.jpg" alt="orange">
+                <img src="images/portfolio/work2.jpg" alt="orange" class="img-fluid">
               </div>
               <div class="col-md-3">
-              <img src="images/portfolio/work1.jpg" alt="widget">
+              <img src="images/portfolio/work1.jpg" alt="widget" class="img-fluid">
               </div>
             </div>
           <div>
 
 
-          <div class="row portfolio">
+          <div class="row">
             <div class="col-md-3">
-              <img src="images/portfolio/work7.jpg" alt="logo">
+              <img src="images/portfolio/work7.jpg" alt="logo" class="img-fluid">
             </div>
             <div class="col-md-3">
-              <img src="images/portfolio/work8.jpg" alt="restaurant logo">
+              <img src="images/portfolio/work8.jpg" alt="restaurant logo" class="img-fluid">
             </div>
             <div class="col-md-3">
-              <img src="images/portfolio/work5.jpg" alt="good day">
+              <img src="images/portfolio/work5.jpg" alt="good day" class="img-fluid">
             </div>
             <div class="col-md-3">
-              <img src="images/portfolio/work6.jpg" alt="buttons">
+              <img src="images/portfolio/work6.jpg" alt="buttons" class="img-fluid">
             </div>
           </div>
             
@@ -114,9 +114,9 @@
             <form id="form">
               <div class="form-group">
               <label>Name</label> 
-              <input type="text" id="name" placeholder="John Doe">
+              <input type="text" class="required" id="name" placeholder="John Doe">
               </div>
-              <div class="form-group has-warning">
+              <div class="form-group">
                 <label>Email</label>
               <input type="email" id="email" placeholder="johndoe@example.com"><br/>
               </div>
