--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <img src="images/logo/logo.png" alt="delani logo">
             <h1>WELCOME TO DELANI STUDIO</h1>
             <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+            <img src="images/logo/mouse_click.png" alt="mouse icon">
           </div>
           
           <div class="col-12 about">
@@ -87,7 +88,7 @@
                 <img src="images/portfolio/work4.jpg" alt="black" class="img-fluid">
               </div>
               <div class="col-md-3">
-                <img src="images/portfolio/work3.jpg" class="img-fluid alt="ontari">
+                <img src="images/portfolio/work3.jpg" class="img-fluid" alt= "ontari">
               </div>
               <div class="col-md-3">
                 <img src="images/portfolio/work2.jpg" alt="orange" class="img-fluid">
